# modul-6

./: create_db.py  fill_data.py  mk_request.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  study.db  study_database.sql  Діаграма без назви.drawio
