[tool.poetry]
name = "modul-6"
version = "0.1.0"
description = ""
authors = ["Invil124 <113246425+Invil124@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_6"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^15.3.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
